Bug 167254 - LO crashes when opening a specific RTF file
Summary: LO crashes when opening a specific RTF file
Status: CLOSED FIXED
Alias: None
Product: LibreOffice
Classification: Unclassified
Component: Writer (show other bugs)
Version:
(earliest affected)
25.2.4.3 release
Hardware: x86-64 (AMD64) All
: high major
Assignee: Mike Kaganski
URL:
Whiteboard: target:26.2.0 target:25.8.0.0.beta2 t...
Keywords: bibisected, bisected, regression
Depends on:
Blocks:
 
Reported: 2025-06-26 19:41 UTC by khagaroth
Modified: 2025-09-10 08:40 UTC (History)
2 users (show)

See Also:
Crash report or crash signature:


Attachments
Crashing RTF file (15.98 KB, application/msword)
2025-06-26 19:43 UTC, khagaroth
Details

Note You need to log in before you can comment on or make changes to this bug.
Description khagaroth 2025-06-26 19:41:57 UTC
Description:
LibreOffice crashes when opening attached RTF file.

Steps to Reproduce:
Open attached RTF file.

Actual Results:
LO crashes, restarts and opens empty document recovery dialog.

Expected Results:
LO opens the document.


Reproducible: Always


User Profile Reset: No

Additional Info:
Tried on Windows 10 and Arch. Arch install was a new user profile.

Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 33e196637044ead23f5c3226cde09b47731f7e27
CPU threads: 4; OS: Windows 10 X86_64 (10.0 build 19045); UI render: Skia/Vulkan; VCL: win
Locale: cs-CZ (cs_CZ); UI: cs-CZ
Calc: CL threaded


Version: 25.2.4.3 (X86_64) / LibreOffice Community
Build ID: 520(Build:3)
CPU threads: 1; OS: Linux 6.15; UI render: default; VCL: kf6 (cairo+wayland)
Locale: en-US (en_US.UTF-8); UI: en-US
25.2.4-2
Calc: threaded
Comment 1 khagaroth 2025-06-26 19:43:20 UTC
Created attachment 201496 [details]
Crashing RTF file
Comment 2 Xisco Faulí 2025-06-26 20:47:12 UTC
Regression introduced by:

commit 038473595ed266d15a788d8f97781cbaf066cfe7	[log]
author	Oliver Specht <oliver.specht@cib.de>	Wed Oct 02 14:48:08 2024 +0200
committer	Gabor Kelemen <gabor.kelemen.extern@allotropia.de>	Fri Oct 11 19:07:49 2024 +0200
tree bca5340060a5b233a27adf139a85323f6acb6856
parent 7a0a781da0a56bc38435e556c22f2e7ad4bd1a31 [diff]

tdf#152839 add fill cells to tables imported wrongly from RTF

Bisected with: linux64-25.2
Comment 3 Mike Kaganski 2025-06-26 21:07:30 UTC
https://gerrit.libreoffice.org/c/core/+/187073
Comment 4 Commit Notification 2025-06-27 07:42:02 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "master":

https://git.libreoffice.org/core/commit/08dff87be53d5b267f6fe7b48e155a33b3c76770

tdf#167254: check if getCellCount gives zero

It will be available in 26.2.0.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 5 Commit Notification 2025-06-27 12:14:29 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-8":

https://git.libreoffice.org/core/commit/780e865517bc8ae798edde9d24cecb4a8254e516

tdf#167254: check if getCellCount gives zero

It will be available in 25.8.0.0.beta2.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 6 Commit Notification 2025-06-27 13:57:10 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2":

https://git.libreoffice.org/core/commit/609197187c4f3bc2b78db0bd713dae615b28d39e

tdf#167254: check if getCellCount gives zero

It will be available in 25.2.6.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 7 khagaroth 2025-06-28 07:52:57 UTC
Can confirm crash is fixed when using latest daily build. The resulting document is a mangled mess that doesn't look anywhere near what it should look like, but that's a different bug I will file separately.
Comment 8 Commit Notification 2025-07-11 05:33:58 UTC
Mike Kaganski committed a patch related to this issue.
It has been pushed to "libreoffice-25-2-5":

https://git.libreoffice.org/core/commit/1ebd8cb8fa272d7bd5c5b051a625d79e5957363d

tdf#167254: check if getCellCount gives zero

It will be available in 25.2.5.

The patch should be included in the daily builds available at
https://dev-builds.libreoffice.org/daily/ in the next 24-48 hours. More
information about daily builds can be found at:
https://wiki.documentfoundation.org/Testing_Daily_Builds

Affected users are encouraged to test the fix and report feedback.
Comment 9 khagaroth 2025-08-21 17:30:24 UTC
LO 25.2.5.2 is fixed, the newly released 25.8.0.4 on the other hand is still crashing when opening this file.
Comment 10 Xisco Faulí 2025-08-21 17:35:13 UTC
(In reply to khagaroth from comment #9)
> LO 25.2.5.2 is fixed, the newly released 25.8.0.4 on the other hand is still
> crashing when opening this file.

probably that's related to bug 167956
Comment 11 khagaroth 2025-08-21 17:44:10 UTC
(In reply to Xisco Faulí from comment #10)
> probably that's related to bug 167956
You are right, switching to normal toolbar fixes it.
Comment 12 increaselowly 2025-09-10 02:22:40 UTC Comment hidden (spam)