tdf#167254: check if getCellCount gives zero

Regression since commit 038473595ed266d15a788d8f97781cbaf066cfe7
(tdf#152839 add fill cells to tables imported wrongly from RTF, 2024-10-11).

Change-Id: Ie2da84eb358d291bcc584a86ae69843f13186c3d
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187073
Tested-by: Jenkins
Reviewed-by: Mike Kaganski <mike.kaganski@collabora.com>
Signed-off-by: Xisco Fauli <xiscofauli@libreoffice.org>
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187089
Reviewed-on: https://gerrit.libreoffice.org/c/core/+/187108